Add favicon, remove nav links, prevent text selection and image drag, add animated gradient background, configure domain redirect

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,22 @@ html {
   }
 }
 
+* {
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+
+img {
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+  user-drag: none;
+  pointer-events: none;
+}
+
 :root {
   --background: #050816;
   --surface: #0c1226;
